# win-polyfill

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  PolyfillList.md  README.md  ReadMe.md  TODO.txt  ThunksList.md  format.bat  package.json  translate.sh
.github/workflows/: Build&Test.yml
cmake/: CpkHelpers.cmake  extract_win32_api.cmake
exports/win-10.0.20348.0-x86/json/: aclui.json  activeds.json  adsiid.json  advapi32.json  advpack.json  ahadmin.json  amsi.json  amstrmid.json  apidll.json  appmgmts.json  appmgr.json  appnotify.json  asycfilt.json  audiobaseprocessingobject.json  audiobaseprocessingobjectv140.json  audioeng.json  audiomediatypecrt.json  authz.json  aux_ulib.json  avifil32.json  avrt.json  basesrv.json  bcp47mrm.json  bcrypt.json  bits.json  bluetoothapis.json  bthprops.json  bufferoverflow.json  bufferoverflowu.json  cabinet.json  certadm.json  certca.json  certcli.json  certidl.json  certpoleng.json  cfgmgr32.json  chakrart.json  cimfs.json  cldapi.json  clfsmgmt.json  (+407 more)
exports/win-10.0.20348.0-x86/txt/: aclui.txt  activeds.txt  adsiid.txt  advapi32.txt  advpack.txt  ahadmin.txt  amsi.txt  amstrmid.txt  apidll.txt  appmgmts.txt  appmgr.txt  appnotify.txt  asycfilt.txt  audiobaseprocessingobject.txt  audiobaseprocessingobjectv140.txt  audioeng.txt  audiomediatypecrt.txt  authz.txt  aux_ulib.txt  avifil32.txt  avrt.txt  basesrv.txt  bcp47mrm.txt  bcrypt.txt  bits.txt  bluetoothapis.txt  bthprops.txt  bufferoverflow.txt  bufferoverflowu.txt  cabinet.txt  certadm.txt  certca.txt  certcli.txt  certidl.txt  certpoleng.txt  cfgmgr32.txt  chakrart.txt  cimfs.txt  cldapi.txt  clfsw32.txt  (+401 more)
scripts/: ExportSymbol.ts  api-gen.ts  symbol-gen.ts
src/: win-polyfill-abi.h  win-polyfill-export-begin.inc.h  win-polyfill-export-clean.h  win-polyfill-export-end.inc.h  win-polyfill-export-shared.h  win-polyfill-km.h  win-polyfill-runonce-inc.h  win-polyfill-static.cpp  win-polyfill-version.h  win-polyfill-wrapper.h  win-polyfill.cpp  win-polyfill.h
src/MinimumRequiredVersionHelper/: MinimumRequiredVersionHelper.vcxproj
src/Shared/: km.h
src/Thunks/: CMakeLists.txt  Iphlpapi.hpp  Pdh.hpp  SetupAPI.hpp  ThreadRunner.h  WS2_32.hpp  YY_Thunks.cpp  YY_Thunks.h  advapi32.hpp  api-ms-win-core-com.hpp  api-ms-win-core-datetime.hpp  api-ms-win-core-errorhandling.hpp  api-ms-win-core-fibers.hpp  api-ms-win-core-file.hpp  api-ms-win-core-interlocked.hpp  api-ms-win-core-io.hpp  api-ms-win-core-kernel32-legacy.hpp  api-ms-win-core-libraryloader.hpp  api-ms-win-core-localization.hpp  api-ms-win-core-memory.hpp  api-ms-win-core-path.hpp  api-ms-win-core-processthreads.hpp  api-ms-win-core-processtopology-obsolete.hpp  api-ms-win-core-psapi.hpp  api-ms-win-core-realtime.hpp  api-ms-win-core-registry.hpp  api-ms-win-core-string.hpp  api-ms-win-core-synch.hpp  api-ms-win-core-sysinfo.hpp  api-ms-win-core-systemtopology.hpp  api-ms-win-core-threadpool.hpp  api-ms-win-core-timezone.hpp  api-ms-win-core-util.hpp  api-ms-win-core-version.hpp  api-ms-win-core-winrt-error.hpp  api-ms-win-core-winrt-string.hpp  api-ms-win-core-winrt.hpp  api-ms-win-core-wow64.hpp  api-ms-win-eventing-provider.hpp  api-ms-win-power-base.hpp  (+37 more)
src/YY-Thunks.UnitTest/: CMakeLists.txt  YY-Thunks.UnitTest.cpp  api-ms-win-core-fibers.UnitTest.cpp  api-ms-win-core-kernel32-legacy.UnitTest.cpp  api-ms-win-core-localization.UnitTest.cpp  api-ms-win-core-path.UnitTest.cpp  api-ms-win-core-synch.UnitTest.cpp  api-ms-win-core-threadpool.UnitTest.cpp  api-ms-win-power-base.UnitTest.cpp  bcrypt.UnitTest.cpp  pch.cpp  pch.h  win-polyfill-basic.UnitTest.c  win-polyfill-font.UnitTest.c  win-polyfill-font.UnitTest.cpp  win-polyfill-static-cpp.UnitTest.cpp  win-polyfill-static.UnitTest.c
src/def/: ntdll-win10.def  ntdll-xp-sp3.def  win-clean-include.h
src/polyfill/: SetupAPI.hpp  WS2_32.hpp  advapi32.hpp  api-ms-win-core-datetime.hpp  api-ms-win-core-errorhandling.hpp  api-ms-win-core-fibers.hpp  api-ms-win-core-file.hpp  api-ms-win-core-interlocked.hpp  api-ms-win-core-io.hpp  api-ms-win-core-libraryloader.hpp  api-ms-win-core-localization.hpp  api-ms-win-core-memory.hpp  api-ms-win-core-path.hpp  api-ms-win-core-processthreads.hpp  api-ms-win-core-processtopology-obsolete.hpp  api-ms-win-core-psapi.hpp  api-ms-win-core-realtime.hpp  api-ms-win-core-registry.hpp  api-ms-win-core-string.hpp  api-ms-win-core-synch.hpp  api-ms-win-core-sysinfo.hpp  api-ms-win-core-systemtopology.hpp  api-ms-win-core-threadpool.hpp  api-ms-win-core-timezone.hpp  api-ms-win-core-util.hpp  api-ms-win-core-version.hpp  api-ms-win-core-winrt-error.hpp  api-ms-win-core-winrt-string.hpp  api-ms-win-core-winrt.hpp  api-ms-win-core-wow64.hpp  basic.hpp  d3d11.hpp  d3d9.hpp  dbghelp.hpp  dwmapi.hpp  dwrite.hpp  dxgi.hpp  iphlpapi.hpp  kernel32-polyfill.hpp  kernel32.hpp  (+9 more)
